[package]
name = "qrfp"
version = "0.1.0"
edition = "2021"
authors = ["ykis-0-0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = "1"
rqrr = "0"

# For cli and input parsing
[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]
